---
config:
  layout: dagre
  look: neo
---
erDiagram
	direction TB
	USUARIO {
		Long id PK ""  
		varchar username  ""  
		varchar nombre  ""  
		varchar primerApellido  ""  
		varchar segundoApellido  ""  
		varchar passwd  ""  
		Direccion direccion  ""  
	}

	INQUILINO {
		Long id_usuario FK ""  
		Long id_lista_deseos FK ""  
	}

	PROPIETARIO {
		Long id_usuario FK ""  
	}

	INMUEBLE {
		Long id PK ""  
		Long id_propietario FK ""  
		DireccionInmueble direccion  ""  
		double precioNoche  ""  
	}

	LISTA_DESEOS {
		Long id PK ""  
		Long id_inquilino FK ""  
	}

	DISPONIBILIDAD {
		Long id PK
		Long id_inmueble FK
		Date fechaInicio
		Date fechaFin
		double precio
		varchar politica_cancelacion
	}

	COMODIDAD {
		Long id PK
		varchar nombre
	}

	INMUEBLE_COMODIDAD {
		Long id_inmueble PK FK
		Long id_comodidad PK FK
	}

	USUARIO||--||INQUILINO:"es"
	USUARIO||--||PROPIETARIO:"es"
	PROPIETARIO||--|{INMUEBLE:"tiene"
	INQUILINO||--||LISTA_DESEOS:"tiene"
	LISTA_DESEOS}o--o{INMUEBLE:"contiene"
	INMUEBLE ||--o{ DISPONIBILIDAD: "tiene"
	